Bootstrap namespacing is not working (see https://github.com/twbs/bootstrap-sass/issues/958)

--- a/app/assets/stylesheets/deck/application.css.scss
+++ b/app/assets/stylesheets/deck/application.css.scss
@@ -16,9 +16,10 @@
 $icon-font-path: "bootstrap-sass-official/assets/fonts/bootstrap/";
 @import 'font-awesome/css/font-awesome';
 
+@import 'bootstrap-sass-official/assets/stylesheets/bootstrap-sprockets';
+@import 'bootstrap-sass-official/assets/stylesheets/bootstrap';
+
 .magnet-container {
-	@import 'bootstrap-sass-official/assets/stylesheets/bootstrap-sprockets';
-	@import 'bootstrap-sass-official/assets/stylesheets/bootstrap';
 	@import 'RRSSB/css/rrssb';
 	@import 'angular-rrssb/dist/angular-rrssb';
 	@import 'angular-social/angular-social';
@@ -36,7 +37,10 @@ $icon-font-path: "bootstrap-sass-official/assets/fonts/bootstrap/";
 	}
 
 	.card {
-		width: 20%;
+		width: 100%;
+		@media (min-width: 768px) { width: 50%; }
+		@media (min-width: 992px) { width: 33%; }
+		@media (min-width: 1200px) { width: 25%; }
 		padding: 5px;
 		display: none;
 		&.loaded {
